@@ -24,6 +24,8 @@ unity (7.4.0+16.04.20160906-0ubuntu2) UNRELEASED; urgency=medium
     LP: #1609845)
   * Correctly position the force quit dialog when scaling is different
     than 1.0 (LP: #1637991)
+  * GnomeSession: Retrieve the session id using dbus if $XDG_SESSION_ID
+    is not set
 
  -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Tue, 04 Jul 2017 18:12:47 +0200
 
